# v2/nodejs/controllers/NewslettersService.js
@@ -1,26 +1,6 @@
 'use strict';
 
-exports.findNewsletters = function(vestorly_auth) {
-
-  var examples = {};
-  
-  examples['application/json'] = {
-  "newletters" : [ {
-    "is_sent" : true,
-    "click_count" : 123456789,
-    "unique_click_count" : 123456789,
-    "is_default" : true,
-    "total_click_count" : 123456789
-  } ]
-};
-  
-
-  
-  if(Object.keys(examples).length > 0)
-    return examples[Object.keys(examples)[0]];
-  
-}
-exports.getNewsletterByID = function(vestorly_auth, id) {
+exports.findNewsletters = function(vestorly-auth) {
 
   var examples = {};
   
@@ -28,6 +8,7 @@ exports.getNewsletterByID = function(vestorly_auth, id) {
   "is_sent" : true,
   "click_count" : 123456789,
   "unique_click_count" : 123456789,
+  "_id" : "aeiou",
   "is_default" : true,
   "total_click_count" : 123456789
 };
@@ -38,7 +19,7 @@ exports.getNewsletterByID = function(vestorly_auth, id) {
     return examples[Object.keys(examples)[0]];
   
 }
-exports.updateNewsletter = function(vestorly_auth, id, Newsletter) {
+exports.createNewsletter = function(vestorly-auth, Event) {
 
   var examples = {};
   
@@ -46,6 +27,45 @@ exports.updateNewsletter = function(vestorly_auth, id, Newsletter) {
   "is_sent" : true,
   "click_count" : 123456789,
   "unique_click_count" : 123456789,
+  "_id" : "aeiou",
+  "is_default" : true,
+  "total_click_count" : 123456789
+};
+  
+
+  
+  if(Object.keys(examples).length > 0)
+    return examples[Object.keys(examples)[0]];
+  
+}
+exports.getNewsletterByID = function(vestorly-auth, id) {
+
+  var examples = {};
+  
+  examples['application/json'] = {
+  "is_sent" : true,
+  "click_count" : 123456789,
+  "unique_click_count" : 123456789,
+  "_id" : "aeiou",
+  "is_default" : true,
+  "total_click_count" : 123456789
+};
+  
+
+  
+  if(Object.keys(examples).length > 0)
+    return examples[Object.keys(examples)[0]];
+  
+}
+exports.updateNewsletterByID = function(vestorly-auth, id, Event) {
+
+  var examples = {};
+  
+  examples['application/json'] = {
+  "is_sent" : true,
+  "click_count" : 123456789,
+  "unique_click_count" : 123456789,
+  "_id" : "aeiou",
   "is_default" : true,
   "total_click_count" : 123456789
 };
