# v2/ruby/lib/newsletters_api.rb
@@ -6,9 +6,9 @@ class NewslettersApi
 
 
   # 
-  # Returns all newsletters
+  # Returns all events
   # @param vestorly_auth Vestorly Auth Token
-  # @return Newsletters
+  # @return Newsletter
   def self.findNewsletters (vestorly_auth, opts={})
     query_param_keys = [:vestorly_auth]
     headerParams = {}
@@ -49,16 +49,88 @@ class NewslettersApi
     
     
     response = Swagger::Request.new(:GET, path, {:params=>queryopts,:headers=>headers, :body=>post_body, :form_params => form_parameter_hash }).make.body
-     Newsletters.new(response)
+     Newsletter.new(response)
     
     
   
   end
 
   # 
-  # Returns newsletter by ID
+  # Creates a newsletter
   # @param vestorly_auth Vestorly Auth Token
-  # @param id ID of newsletter to fetch
+  # @param event Newsletter
+  # @return Newsletter
+  def self.createNewsletter (vestorly_auth, event, opts={})
+    query_param_keys = [:vestorly_auth]
+    headerParams = {}
+
+    
+    
+    # set default values and merge with input
+    options = {
+      :'vestorly_auth' => vestorly_auth,
+      :'event' => event
+      
+    }.merge(opts)
+
+    #resource path
+    path = "/newsletters".sub('{format}','json')
+    
+    # pull querystring keys from options
+    queryopts = options.select do |key,value|
+      query_param_keys.include? key
+    end
+
+    # header parameters
+    headers = {}
+
+    _header_accept = ''
+    if _header_accept != ''
+      headerParams['Accept'] = _header_accept
+    end 
+    _header_content_type = []
+    headerParams['Content-Type'] = _header_content_type.length > 0 ? _header_content_type[0] : 'application/json'
+
+    
+    
+    # http body (model)
+    post_body = nil
+    
+    if body != nil
+      if body.is_a?(Array)
+        array = Array.new
+        body.each do |item|
+          if item.respond_to?("to_body".to_sym)
+            array.push item.to_body
+          else
+            array.push item
+          end
+        end
+        post_body = array
+      else 
+        if body.respond_to?("to_body".to_sym)
+          post_body = body.to_body
+        else
+          post_body = body
+        end
+      end
+    end
+    
+    # form parameters
+    form_parameter_hash = {}
+    
+    
+    response = Swagger::Request.new(:POST, path, {:params=>queryopts,:headers=>headers, :body=>post_body, :form_params => form_parameter_hash }).make.body
+     Newsletter.new(response)
+    
+    
+  
+  end
+
+  # 
+  # Get a newsletter by ID
+  # @param vestorly_auth Vestorly Auth Token
+  # @param id Mongo ID of event to get
   # @return Newsletter
   def self.getNewsletterByID (vestorly_auth, id, opts={})
     query_param_keys = [:vestorly_auth]
@@ -109,12 +181,12 @@ class NewslettersApi
   end
 
   # 
-  # Update newsletter by ID
+  # Updates a newsletter
   # @param vestorly_auth Vestorly Auth Token
-  # @param id ID of newsletter to fetch
-  # @param newsletter Newsletter
+  # @param id Mongo ID of event to update
+  # @param event Newsletter
   # @return Newsletter
-  def self.updateNewsletter (vestorly_auth, id, newsletter, opts={})
+  def self.updateNewsletterByID (vestorly_auth, id, event, opts={})
     query_param_keys = [:vestorly_auth]
     headerParams = {}
 
@@ -124,7 +196,7 @@ class NewslettersApi
     options = {
       :'vestorly_auth' => vestorly_auth,
       :'id' => id,
-      :'newsletter' => newsletter
+      :'event' => event
       
     }.merge(opts)
 
@@ -152,10 +224,29 @@ class NewslettersApi
     # http body (model)
     post_body = nil
     
+    if body != nil
+      if body.is_a?(Array)
+        array = Array.new
+        body.each do |item|
+          if item.respond_to?("to_body".to_sym)
+            array.push item.to_body
+          else
+            array.push item
+          end
+        end
+        post_body = array
+      else 
+        if body.respond_to?("to_body".to_sym)
+          post_body = body.to_body
+        else
+          post_body = body
+        end
+      end
+    end
+    
     # form parameters
     form_parameter_hash = {}
     
-    form_parameter_hash["Newsletter"] = newsletter
     
     response = Swagger::Request.new(:PUT, path, {:params=>queryopts,:headers=>headers, :body=>post_body, :form_params => form_parameter_hash }).make.body
      Newsletter.new(response)
